Fix incorrect classnames for movie covers

--- a/src/templates/movie/index.module.css
+++ b/src/templates/movie/index.module.css
@@ -96,26 +96,26 @@
   display: none;
 }
 
-.cover-the-lobster {
+.theLobster {
   background-image: url("../../pages/movies/covers/the-lobster.jpg");
 }
 
-.cover-the-lincoln-lawyer {
+.theLincolnLawyer {
   background-image: url("../../pages/movies/covers/the-linncoln-lawyer.jpg");
 }
 
-.cover-a-i--artificial-intelligence {
+.aIArtificialIntelligence {
   background-image: url("../../pages/movies/covers/a-i--artificial-intelligence.jpg");
 }
 
-.cover-henri-cartier-bresson-just-plain-love {
+.henriCartierBressonJustPlainLove {
   background-image: url("../../pages/movies/covers/henri-cartier-bresson--just-plain-love.jpg");
 }
 
-.cover-split {
+.split {
   background-image: url("../../pages/movies/covers/split.jpg");
 }
 
-.cover-barry-lyndon {
+.barryLyndon {
   background-image: url("../../pages/movies/covers/barry-lyndon.jpg");
 }
